k8s-yaml/eloan-prod/eloan-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: eloan-prod
  namespace: prod
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: eloan-prod
    spec:
      containers:
      - image: 192.168.11.53:8082/eloan-prod:2.1.0
        imagePullPolicy: IfNotPresent
        name: eloan-prod
        ports:
        - containerPort: 8080
          hostPort: 8899
          name: eloan-prod
          protocol: TCP
        volumeMounts:
        - mountPath: /usr/local/tomcat/logs
          name: eloan-portal-prod-log
        - mountPath: /mfbmsDataFile/signaturesFile/eloan
          name: eloan-signatures
        - mountPath: /home/tomcat/upload
          name: eloan-upload
        - mountPath: /home/tomcat/reportUpload
          name: eloan-reportupload
        - mountPath: /home/tomcat/invitationQrCodeUpload
          name: eloan-invitationqrcodeupload
      restartPolicy: Always
      nodeSelector:
        eloan: eloan-prod
      volumes:
      - hostPath:
          path: /app/logs/eloan-portal
        name: eloan-portal-prod-log
      - name: eloan-signatures
        nfs:
          path: /volume1/LuYin/signaturesFile/eloan
          server: 192.168.3.34
      - name: eloan-upload
        nfs:
          path: /volume1/eloan-attachment-prod/upload
          server: 192.168.3.64
      - name: eloan-reportupload
        nfs:
          path: /volume1/eloan-attachment-prod/reportUpload
          server: 192.168.3.64
      - name: eloan-invitationqrcodeupload
        nfs:
          path: /volume1/eloan-attachment-prod/invitationQrCodeUpload
          server: 192.168.3.64
