k8s-yaml/eloan-prod/eloan-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: eloan-svc
  namespace: prod
spec:
  ports:
  - name: eloan-svc
    nodePort: 31112
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: eloan-prod
  type: NodePort
