k8s-yaml/eloan-prod/eloan-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eloan-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  rules:
  - host: prod.eloan-portal.com
    http:
      paths:
      - backend:
          serviceName: eloan-svc
          servicePort: 80
        path: /
